[project]
name = "fleetwatch"
version = "1.0.0"
description = "OpenEnv RL environment for AI oversight agents"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.3",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "fleetwatch"
version = "1.0.0"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]
